[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/laser/laser.gd" type="Script" id=1]
[ext_resource path="res://game/laser/laser.png" type="Texture" id=2]
[ext_resource path="res://game/laser/beam.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/laser/Random 2.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 17.5 )

[node name="laser" type="Node2D"]
z_index = -2
z_as_relative = false
script = ExtResource( 1 )

[node name="laser" type="Sprite" parent="."]
position = Vector2( 0, -11 )
texture = ExtResource( 2 )
offset = Vector2( 0, 7 )
hframes = 5
vframes = 4

[node name="bottonLaser" type="Sprite" parent="."]
position = Vector2( -1, 42 )
texture = ExtResource( 2 )
offset = Vector2( 0, -7 )
flip_v = true
hframes = 5
vframes = 4

[node name="area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area"]
position = Vector2( 0, 16 )
shape = SubResource( 1 )

[node name="beams" type="Node2D" parent="."]
z_index = -1

[node name="beam" parent="beams" instance=ExtResource( 3 )]
position = Vector2( 0, 8 )

[node name="beam2" parent="beams" instance=ExtResource( 3 )]
position = Vector2( 0, 25 )

[node name="working" type="Timer" parent="."]
wait_time = 0.9
one_shot = true

[node name="cooldown" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 3.0
max_distance = 600.0
bus = "sfx"

[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
[connection signal="timeout" from="working" to="." method="_on_working_timeout"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
